# .dotfiles

./: .gitignore  README.md  bat  bat.sh  bootstrap.sh  css  error  requirements.txt  setup-hub.sh  setup-local.sh  tes2  test  test 2  test2  test3  userChrome.css  userContent.css  verify.sh  watchlist.csv
.githooks/: pre-commit
archive/xinit/: .xinitrc
dunst/.config/dunst/: dunstrc
git/: .gitconfig
git/.config/git/: default.conf.example  gitmessage  personal.conf.example  school.conf.example  work.conf.example
gtk/.config/gtk-3.0/: settings.ini
herbstluftwm/: autostart  test
herbstluftwm/.config/herbstluftwm/: autostart
hyprlock/.config/hypr/: hyprlock.conf
setup/: bootstrap.sh  setup-hub.sh  setup-local.sh  setup.sh  vault.conf.example  verify.sh
ssh/.ssh/: config
startpages/: board.css  board.json  context-menu.css  function-urlbar.css  immortal.css  userChrome.css  userContent.css
startpages/chrome/: sidebery.json  userChrome.css  userContent.css
urxvt/: .Xdefaults  Immortal  Immortalmachine  bifrost  blaque  cassini  darkmachine  dune  eon  grey  immortal  ink-black  ink-white  jack  jungel  kitty-ink  lambada  meerkat  meridian  miasma  moss  noir  ripley  solis  solus  sylar  syrus  variant
urxvt/.urxvt/themes/: active-theme  eon  meerkat  ripley
vscode/: settings.json
xinit/: .xinitrc
yazi/: init.lua  theme.toml
zsh/: .zprofile  .zshrc  alias.zsh  aliases.zsh  completion.zsh  env.zsh  environment.zsh  history.zsh  keys.zsh  meridian.zsh  plugins.zsh  prompt.zsh  security.zsh
zsh/functions/: c  ddg  gcm  x
(+38 files in other folders)
